src/objects/RT1__UserSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>RT1__AccessCode__c</fullName>
        <label>Access Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__AccessLevel__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Access Level</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__CreateNewLeads__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create New Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__DefaultLeadSource__c</fullName>
        <label>Default Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__DefaultQuestionIds__c</fullName>
        <label>Default Question IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RT1__LeadAssignmentBehavior__c</fullName>
        <label>Lead Assignment Behavior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__LeadAssignmentRuleId__c</fullName>
        <label>Lead Assignment Rule Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__LeadOwnerId__c</fullName>
        <label>Lead Owner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__Passcode__c</fullName>
        <label>Passcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__SyncAutomatically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__TollFreeNumber__c</fullName>
        <label>Toll Free Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__UpdateLeadsWithCcData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Leads With CC Data</label>
        <type>Checkbox</type>
    </fields>
    <label>Readytalk User Settings</label>
</CustomObject>